modified layout in MailList styling and Dailysepcial button layout and other spacing issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@
 }
 
 .pair {
-  @apply w-[80%] sm:w-[50%] md:w-[35%] lg:w-[30%] xl:w-[25%] xxl:w-[20%];
+  @apply w-[90%] sm:w-[50%] md:w-[35%] lg:w-[30%] xl:w-[25%] xxl:w-[20%];
 }
 
 .page-scale {
